# RISC-V-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cdb.hpp  constants.hpp  cpu.hpp  instruction.hpp  loader.hpp  logger.hpp  reg.hpp  rob.hpp
include/backend/: backend.hpp  cdb.hpp  memsys.hpp  rs.hpp
include/backend/memsys/: memory.hpp  mob.hpp  mrs.hpp
include/backend/units/: alu.hpp  branch.hpp  lsb.hpp  memory.hpp  mob.hpp
include/frontend/: decoder.hpp  fetcher.hpp  frontend.hpp  pc.hpp  predictor.hpp
include/middlend/: commit.hpp  control.hpp  dispatch.hpp  reg.hpp  rob.hpp
include/units/: lsb.hpp  memory.hpp  mob.hpp
include/utils/: buffered.hpp  bus.hpp  clock.hpp  dump.hpp  hive.hpp  ints.hpp  port.hpp  queue.hpp  reg_dump.hpp  uints.hpp
include/utils/logger/: logger.hpp
standard/: dump.hpp  interpreter.hpp  main.cpp
unittest/: backend_test.cpp  bus_test.cpp  fm_test1.cpp  frontend_test.cpp  logger.cpp  mb_test1.cpp  mem_test.cpp  middle_test.cpp
